# tcpython

./: LICENSE  README.md  pyproject.toml
tcpython/packets/: __init__.py  ether.py  ip.py  packet.py  tcp.py  udp.py
tcpython/senders/: udp_sender.py
